# nri_mission_ui_backend

./: README.md
src/: package_install.txt
src/agent_gps_test/: package.xml  setup.cfg  setup.py
src/agent_gps_test/agent_gps_test/: agent_gps_follow_test_node.py  agent_gps_test_node.py
src/nri_plan_agent_websocket/: package.xml  setup.cfg  setup.py
src/nri_plan_agent_websocket/nri_plan_agent_websocket/: nri_plan_agent_websocket_node.py
src/nri_plan_interface/: package.xml  setup.cfg  setup.py
src/nri_plan_interface/nri_plan_interface/: nri_plan_interface_node.py
src/nri_plan_iotest/: package.xml  setup.cfg  setup.py
src/nri_plan_iotest/nri_plan_iotest/: nri_plan_iotest_node.py
src/nri_plan_main_launch/: CMakeLists.txt  package.xml
src/nri_plan_main_launch/launch/: nri_plan.launch.py  nri_plan_agent_websocket.launch.py
src/nri_plan_main_launch/params/: nri_plan_common.yaml
src/nri_plan_msgs/: CMakeLists.txt  package.xml
src/nri_plan_msgs/launch/: endpoint.launch.py  nri_plan.launch.py  nri_plan_interface.launch.py  nri_plan_partition.launch.py  nri_plan_waypoint.launch.py
src/nri_plan_msgs/msg/: Gps3WayPoints.msg
src/nri_plan_msgs/params/: nri_plan_common.yaml
src/nri_plan_partition/: CMakeLists.txt  README.md  package.xml
src/nri_plan_partition/include/nri_plan_partition/: dynamic_voronoi.h  nri_plan_partition.hpp  voro_cell.h
src/nri_plan_partition/src/: dynamic_voronoi.cpp  nri_plan_partition.cpp  voro_cell.cpp
src/nri_plan_waypoint/: package.xml  setup.cfg  setup.py
src/nri_plan_waypoint/nri_plan_waypoint/: nri_plan_waypoint_node.py
src/trunk/: agent0.txt  agent2.txt  agent3.txt  gps_lb.txt  gps_lu.txt  gps_rb.txt  gps_ru.txt
